force-app/main/default/objects/Location_Daily_Info__c/Location_Daily_Info__c.object-meta.xml
<CustomObject>
    <label>Location Daily Info</label>
    <nameField>
        <displayFormat>DI-{000000}</displayFormat>
        <label>Location Daily Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Daily Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>