force-app/main/default/objects/Location_Daily_Info__c/fields/Date_Concat__c.field-meta.xml
<CustomField>
    <fullName>Date_Concat__c</fullName>
    <formula>TEXT( DAY(Date__c) ) &amp; &quot;/&quot; &amp; CASE(MONTH(Date__c), 1, &quot;Jan&quot;, 2, &quot;Feb&quot;, 3, &quot;Mar&quot;, 4, &quot;Apr&quot;, 5, &quot;May&quot;, 6, &quot;Jun&quot;, 7, &quot;Jul&quot;, 8, &quot;Aug&quot;, 9, &quot;Sep&quot;, 10, &quot;Oct&quot;, 11, &quot;Nov&quot;, &quot;Dec&quot;) &amp; &quot;/&quot; &amp; TEXT( YEAR(Date__c) ) &amp;  IF( Seats_Available_Morning__c &gt; 0, &quot; - Morning YES &quot;, &quot; - Morning NO &quot;) &amp; IF( Seats_Available_Afternoon__c &gt; 0, &quot; - Afternoon YES&quot;, &quot; - Afternoon NO&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Concat</label>
    <type>Text</type>
</CustomField>