force-app/main/default/objects/Location_Daily_Info__c/fields/Exist_Seat_Available__c.field-meta.xml
<CustomField>
    <fullName>Exist_Seat_Available__c</fullName>
    <formula>Seats_Available_Morning__c  +  Seats_Available_Afternoon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exist Seat Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>