force-app/main/default/objects/Location_Daily_Info__c/fields/Number_of_Sanifications__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sanifications__c</fullName>
    <label>Number of Required Sanifications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>