force-app/main/default/objects/Location_Daily_Info__c/fields/Number_of_Sanifications_Done__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sanifications_Done__c</fullName>
    <label>Number of Sanifications Done</label>
    <summaryForeignKey>Sanitization__c.Location_sanitization__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>