force-app/main/default/objects/Location_Daily_Info__c/fields/Reserved_Daily_Seats__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Daily_Seats__c</fullName>
    <label>Reserved Daily Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>