force-app/main/default/objects/Location_Daily_Info__c/fields/Seats_Available_Afternoon__c.field-meta.xml
<CustomField>
    <fullName>Seats_Available_Afternoon__c</fullName>
    <label>Seats Available Afternoon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>