force-app/main/default/objects/Location_Daily_Info__c/fields/Seats_Available_Full__c.field-meta.xml
<CustomField>
    <fullName>Seats_Available_Full__c</fullName>
    <formula>IF ( Seats_Available_Morning__c  = 0 ||   Seats_Available_Afternoon__c   = 0, 0 ,

IF(Seats_Available_Morning__c &lt;= Seats_Available_Afternoon__c , Seats_Available_Morning__c, Seats_Available_Afternoon__c)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seats Available Full</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>