force-app/main/default/objects/Location_Daily_Info__c/fields/Total_Seats_Full__c.field-meta.xml
<CustomField>
    <fullName>Total_Seats_Full__c</fullName>
    <formula>IF ( Total_Seats_Afternoon__c = 0 ||  Total_Seats_Morning__c = 0, 0 ,

IF ( Total_Seats_Afternoon__c &lt;=  Total_Seats_Morning__c , Total_Seats_Afternoon__c, Total_Seats_Morning__c)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Seats Full</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>