force-app/main/default/objects/Location_Daily_Info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Location__c</columns>
    <columns>Seats_Available_Afternoon__c</columns>
    <columns>Seats_Available_Morning__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>